--- a/packages/generate-api/package.json
+++ b/packages/generate-api/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "license": "EUPL-1.2",
   "type": "module",
-  "private": true,
   "scripts": {
     "lint": "eslint ./src --report-unused-disable-directives --max-warnings 0",
     "check-types": "tsc --noemit",
-    "process-api": "npm run _load-api-spec && npm run _run-openapi-generator && npm run _create-api-package",
-    "_load-api-spec": "vite-node ./src/loadApiSpec.ts",
-    "_run-openapi-generator": "openapi-generator-cli generate -i ../../../api.sanitized.json -g typescript-axios --additional-properties=\"enumPropertyNaming=original\" -o generated-api",
-    "_create-api-package": "vite-node --loader ts-node/esm ./src/createApiPackage.ts",
-    "foo": "vite-node --loader ts-node/esm ./src/test.ts"
+    "build": "rimraf ./bin && rollup -c && chmod +x ./bin/generate-api.js",
+    "generate-api": "vite-node --loader ts-node/esm ./src/generate-api.ts ../../test"
+  },
+  "main": "bin/generate-api.js",
+  "bin": {
+    "generate-api": "bin/generate-api.js"
   },
   "dependencies": {
     "@openapitools/openapi-generator-cli": "2.20.2",
@@ -27,6 +27,9 @@
     "@types/node": "22.15.23",
     "eslint": "9.27.0",
     "typescript": "5.8.3",
-    "vite-node": "3.1.4"
+    "vite-node": "3.1.4",
+    "rimraf": "6.0.1",
+    "rollup": "4.41.1",
+    "rollup-plugin-esbuild": "6.2.1"
   }
 }
