--- a/packages/generate-api/package.json
+++ b/packages/generate-api/package.json
@@ -1,29 +1,30 @@
 {
   "name": "@gen-epix/generate-api",
-  "version": "0.0.1",
+  "version": "0.0.10",
   "license": "EUPL-1.2",
   "type": "module",
+  "files": [
+    "bin"
+  ],
+  "main": "bin/generate-api.js",
   "scripts": {
     "lint": "eslint ./src --report-unused-disable-directives --max-warnings 0",
     "check-types": "tsc --noemit",
     "build": "rimraf ./bin && rollup -c && chmod +x ./bin/generate-api.js",
-    "generate-api": "vite-node --loader ts-node/esm ./src/generate-api.ts ../../test"
+    "generate-api": "vite-node --loader ts-node/esm ./src/generate-api.ts ../../../gen-epix-ui/src/api"
   },
-  "main": "bin/generate-api.js",
   "bin": {
     "generate-api": "bin/generate-api.js"
   },
   "dependencies": {
     "@openapitools/openapi-generator-cli": "2.20.2",
     "@gen-epix/tools-lib": "*",
-    "fs-extra": "11.3.0",
     "node-fetch": "3.3.2",
     "openapi-types": "12.1.3"
   },
   "devDependencies": {
     "@gen-epix/eslint-config": "*",
     "@gen-epix/typescript-config": "*",
-    "@types/fs-extra": "11.0.4",
     "@types/node": "22.15.23",
     "eslint": "9.27.0",
     "typescript": "5.8.3",
