--- a/packages/generate-api/tsconfig.json
+++ b/packages/generate-api/tsconfig.json
@@ -5,7 +5,9 @@
     "esModuleInterop": true,
     "module": "ESNext",
     "target": "ESNext",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "outDir": "dist",
+    "noEmit": false
   },
   "ts-node": {
     "esm": true,
