--- a/packages/reconfigure-package/package.json
+++ b/packages/reconfigure-package/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@gen-epix/reconfigure-package",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "EUPL-1.2",
   "type": "module",
   "files": [
     "bin"
   ],
   "main": "bin/reconfigure-package.js",
-  "typings": "bin/reconfigure-package.d.ts",
   "scripts": {
     "lint": "eslint ./src --report-unused-disable-directives --max-warnings 0",
     "check-types": "tsc --noemit",
@@ -18,15 +17,12 @@
     "reconfigure-package": "bin/reconfigure-package.js"
   },
   "dependencies": {
-    "@gen-epix/tools-lib": "*",
-    "fs-extra": "11.3.0"
+    "@gen-epix/tools-lib": "*"
   },
   "devDependencies": {
     "@gen-epix/eslint-config": "*",
     "@gen-epix/typescript-config": "*",
-    "@types/fs-extra": "11.0.4",
     "@types/node": "22.15.23",
-    "eslint": "9.27.0",
     "typescript": "5.8.3",
     "vite-node": "3.1.4",
     "rimraf": "6.0.1",
