--- a/packages/generate-api/package.json
+++ b/packages/generate-api/package.json
@@ -2,6 +2,15 @@
   "name": "@gen-epix/generate-api",
   "version": "0.0.10",
   "license": "EUPL-1.2",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RIVM-bioinformatics/gen-epix-ui-tools.git",
+    "directory": "packages/generate-api"
+  },
+  "author": "RIVM-bioinformatics <ids-bioinformatics@rivm.nl>",
   "type": "module",
   "files": [
     "bin"
