--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gen-epix/eslint-config",
-  "version": "0.0.6",
+  "version": "0.0.10",
   "license": "EUPL-1.2",
   "publishConfig": {
     "access": "public"
@@ -17,7 +17,8 @@
     "release": "npm run semantic-release"
   },
   "peerDependencies": {
-    "eslint": "^9.0.0"
+    "eslint": "^9.0.0",
+    "typescript": ">=5.8.0 <5.9.0"
   },
   "dependencies": {
     "@eslint/js": "9.32.0",
@@ -43,6 +44,6 @@
   },
   "devDependencies": {
     "@gen-epix/typescript-config": "*",
-    "typescript": "5.9.2"
+    "typescript": "5.8.3"
   }
 }
