--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gen-epix/eslint-config",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "license": "EUPL-1.2",
   "publishConfig": {
     "access": "public"
@@ -18,15 +18,15 @@
   },
   "peerDependencies": {
     "eslint": "^9.0.0",
-    "typescript": ">=5.8.0 <5.9.0"
+    "typescript": "^5.9.0"
   },
   "dependencies": {
-    "@eslint/js": "9.32.0",
+    "@eslint/js": "9.33.0",
     "@spence1115/eslint-plugin-modules-newlines": "1.0.1",
-    "@stylistic/eslint-plugin": "5.2.2",
-    "@typescript-eslint/eslint-plugin": "8.39.0",
-    "@typescript-eslint/parser": "8.39.0",
-    "@typescript-eslint/utils": "8.39.0",
+    "@stylistic/eslint-plugin": "5.2.3",
+    "@typescript-eslint/eslint-plugin": "8.39.1",
+    "@typescript-eslint/parser": "8.39.1",
+    "@typescript-eslint/utils": "8.39.1",
     "@vitest/eslint-plugin": "1.3.4",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -44,6 +44,6 @@
   },
   "devDependencies": {
     "@gen-epix/typescript-config": "*",
-    "typescript": "5.8.3"
+    "typescript": "5.9.2"
   }
 }
