--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gen-epix/eslint-config",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "license": "EUPL-1.2",
   "publishConfig": {
     "access": "public"
@@ -10,6 +10,7 @@
     "url": "https://github.com/RIVM-bioinformatics/gen-epix-ui-tools.git",
     "directory": "packages/eslint-config"
   },
+  "homepage": "https://github.com/RIVM-bioinformatics/gen-epix",
   "author": "RIVM-bioinformatics <ids-bioinformatics@rivm.nl>",
   "main": "src/eslint.config.js",
   "type": "module",
