--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,6 +1,6 @@
   {
     "name": "@gen-epix/typescript-config",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "license": "EUPL-1.2",
     "publishConfig": {
       "access": "public"
@@ -11,6 +11,7 @@
       "directory": "packages/generate-api"
     },
     "author": "RIVM-bioinformatics <ids-bioinformatics@rivm.nl>",
+    "homepage": "https://github.com/RIVM-bioinformatics/gen-epix",
     "main": "tsconfig.json",
     "peerDependencies": {
       "typescript": "^5.0.0"
