--- a/packages/generate-api/package.json
+++ b/packages/generate-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gen-epix/generate-api",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "license": "EUPL-1.2",
   "publishConfig": {
     "access": "public"
@@ -27,20 +27,21 @@
     "generate-api": "bin/generate-api.js"
   },
   "dependencies": {
-    "@openapitools/openapi-generator-cli": "2.22.0",
+    "@openapitools/openapi-generator-cli": "2.23.1",
     "@gen-epix/tools-lib": "*",
     "node-fetch": "3.3.2",
-    "openapi-types": "12.1.3"
+    "openapi-types": "12.1.3",
+    "formdata-polyfill": "4.0.10"
   },
   "devDependencies": {
     "@gen-epix/eslint-config": "*",
     "@gen-epix/typescript-config": "*",
-    "@types/node": "24.3.0",
-    "eslint": "9.33.0",
+    "@types/node": "24.3.1",
+    "eslint": "9.35.0",
     "typescript": "5.9.2",
     "vite-node": "3.2.4",
     "rimraf": "6.0.1",
-    "rollup": "4.46.4",
+    "rollup": "4.50.1",
     "rollup-plugin-esbuild": "6.2.1"
   }
 }
