feat: allow user to update oidc configuration using rest endpoing

--- a/packages/oidc-mock-server/package.json
+++ b/packages/oidc-mock-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gen-epix/oidc-mock-server",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "EUPL-1.2",
   "publishConfig": {
     "access": "public"
@@ -28,18 +28,19 @@
   "dependencies": {
     "@gen-epix/tools-lib": "*",
     "basic-auth": "2.0.1",
-    "oauth2-mock-server": "8.2.0"
+    "oauth2-mock-server": "8.2.1"
   },
   "devDependencies": {
     "@gen-epix/eslint-config": "*",
     "@gen-epix/typescript-config": "*",
     "@types/basic-auth": "1.1.8",
+    "@types/express": "5.0.6",
     "@types/node": "24.10.1",
-    "eslint": "9.39.1",
+    "eslint": "9.39.2",
     "nodemon": "3.1.11",
     "typescript": "5.9.3",
     "rimraf": "6.1.2",
-    "rollup": "4.53.3",
+    "rollup": "4.57.0",
     "rollup-plugin-esbuild": "6.2.1"
   }
 }
